--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,16 +19,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: ^0.15.3
-  provider: ^4.0.1
-  rxdart: ^0.23.1
-  cloud_firestore: ^0.13.0+1
-  intl: ^0.16.0
   auto_route: ^0.4.4
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  cloud_firestore: ^0.13.0+1
   cupertino_icons: ^0.1.2
+  firebase_auth: ^0.15.3
+  freezed_annotation: ^0.7.1
+  intl: ^0.16.0
+  provider: ^4.0.1
+
 
 dev_dependencies:
   flutter_test:
@@ -37,6 +35,7 @@ dev_dependencies:
   auto_route_generator: ^0.4.4
   build_runner: ^1.7.3
   random_string: ^2.0.0
+  freezed: ^0.10.6
   flutter_driver:
     sdk: flutter
   test: any
