--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,19 +66,28 @@ flutter:
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  # list giving the asset and other descriptors for the font.
+  fonts:
+    - family: Inter
+      fonts:
+      - asset: assets/fonts/inter/Inter-Black-slnt=0.ttf
+        weight: 900
+      - asset: assets/fonts/inter/Inter-ExtraBold-slnt=0.ttf
+        weight: 800
+      - asset: assets/fonts/inter/Inter-Bold-slnt=0.ttf
+        weight: 700
+      - asset: assets/fonts/inter/Inter-SemiBold-slnt=0.ttf
+        weight: 600
+      - asset: assets/fonts/inter/Inter-Medium-slnt=0.ttf
+        weight: 500
+      - asset: assets/fonts/inter/Inter-Regular-slnt=0.ttf
+        weight: 400
+      - asset: assets/fonts/inter/Inter-Light-slnt=0.ttf
+        weight: 300
+      - asset: assets/fonts/inter/Inter-ExtraLight-slnt=0.ttf
+        weight: 200
+      - asset: assets/fonts/inter/Inter-Thin-slnt=0.ttf
+        weight: 100
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
