--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   provider: ^4.0.1
   introduction_screen: ^1.0.8
   flushbar: 1.10.0
+  shared_preferences: ^0.5.7+3
 
 dev_dependencies:
   flutter_test:
