--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/images/intropages/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
